--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
 
       <section id="projects"><span>PROJECTS</span>
         <div class="project-container">
-          <img src="/assets/movie-database.png" alt="">
+          <img src="./assets/movie-database.png" alt="">
           <div>
             <a href="https://snekhab.github.io/react_movie_database_website/" target="_blank" class="project-1">Movie Database Website <i class='bx bxs-right-top-arrow-circle'></i></a>
             <p>Developed a movie database website using React. The platform will allow users to browse, search, and explore detailed information about various movies. It will feature detailed movie information, including ratings, genres, and descriptions. It will feature an interactive and user-friendly interface with smooth navigation. React's dynamic components will enhance performance and ensure a seamless user experience.</p>
@@ -62,7 +62,7 @@
         </div>
 
         <div class="project-container">
-          <img src="/assets/form.png" alt="">
+          <img src="./assets/form.png" alt="">
           <div>
             <a href="https://snekhab.github.io/responsive_form/" target="_blank">
               Login-Signup Form <i class='bx bxs-right-top-arrow-circle'></i>
@@ -74,7 +74,7 @@
         </div>
     
         <div class="project-container">
-          <img src="/assets/flower-shop.png" alt="">
+          <img src="./assets/flower-shop.png" alt="">
           <div>
             <a href="https://snekhab.github.io/flower_shop_responsive_website/" target="_blank">Flower-Shop Website <i class='bx bxs-right-top-arrow-circle'></i></a>
             <p>Build a flower shop website using HTML and CSS. The site will feature an elegant and visually appealing design to showcase various floral arrangements. A well-structured layout will ensure easy navigation for users to explore different products. The design will focus on aesthetics and responsiveness to enhance the overall shopping experience.</p>
@@ -89,13 +89,13 @@
       
       <section id="skills">SKILLS
         <div class="skills">
-          <img src="/assets/icons8-html5.svg" alt="">
-          <img src="/assets/icons8-css.svg" alt="">
-          <img src="/assets/icons8-js.svg" alt="">
-          <img src="/assets/icons8-react-native.svg" alt="">
-          <img src="/assets/icons8-python.svg" alt="">
-          <img src="/assets/icons8-wordpress.svg" alt="">
-          <img src="/assets/icons8-figma.svg" alt="">
+          <img src="./assets/icons8-html5.svg" alt="">
+          <img src="./assets/icons8-css.svg" alt="">
+          <img src="./assets/icons8-js.svg" alt="">
+          <img src="./assets/icons8-react-native.svg" alt="">
+          <img src="./assets/icons8-python.svg" alt="">
+          <img src="./assets/icons8-wordpress.svg" alt="">
+          <img src="./assets/icons8-figma.svg" alt="">
         </div>
       </section>
   
