--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           </div>
         </div>
         
-        <a href="" target="_blank" class="resume">View Full Resume <i class='bx bxs-right-top-arrow-circle'></i></a>
+        <a href="https://drive.google.com/drive/u/7/my-drive" target="_blank" class="resume">View Full Resume <i class='bx bxs-right-top-arrow-circle'></i></a>
 
       </section>
       
