--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <link rel="stylesheet" href="index.css">
 
-  <link rel="stylesheet" href="/assert/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./assert/css/bootstrap.min.css">
   <title>Snekha Baskar</title>
 </head>
 <body class="my-custom-bg">
@@ -151,6 +151,6 @@
     </div>
   </div>
 
-  <script src="/assert/js/bootstrap.bundle.min.js"></script>
+  <script src="./assert/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
